# goro

./: .gitignore  CMakeLists.txt  README.md
doc/plantuml/: .gitignore  class-overview.uml  generate.sh
src/: CMakeLists.txt  about.c  about.h  ai.c  ai.h  board.c  board.h  boardcoord.c  boardcoord.h  boarditerator.c  boarditerator.h  cliplayer.c  cliplayer.h  game.c  game.h  go.c  go.h  gomoko.c  gomoko.h  gorocli.c  group.c  group.h  gtp.c  gtp.h  main.c  makefile  minimax.c  minimax.h  player.h  testplayer.c  testplayer.h  tictactoe.c  tictactoe.h  ttt.c  ui.c  ui.h
src/board/: board.c  board.h  boardcoord.c  boardcoord.h  boarditerator.c  boarditerator.h
src/cli/: about.h  goro.c  goro.h  options.c  options.h
src/games/: game.c  game.h  gamemove.c  gamemove.h  go.c  go.h  gomoko.c  gomoko.h  group.c  group.h  tictactoe.c  tictactoe.h
src/main/: about.c  goro.c  goro.h  main.c  options.c
src/player/: cliplayer.c  cliplayer.h  gtp.c  gtp.h  minimax.c  minimax.h  player.h  testplayer.c
test/: CMakeLists.txt  goroVSgnugo.sh  gorotest.c  test.sh
test/board/: testboard.c  testboard.h  testboardcoord.c  testboarditerator.c
test/cli/: testgoro.c  testoptions.c
test/games/: testgame.c  testgamemove.c  testgo.c  testgomoko.c  testgroup.c  testtictactoe.c
test/player/: testcliplayer.c  testgtp.c  testminimax.c  testtestplayer.c
tools/: gorovsgnugo  sgf2goro
