cmake_minimum_required (VERSION 2.6)
cmake_policy(SET CMP0009 NEW)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
project(goro)
enable_testing()
add_subdirectory(src)
add_subdirectory(test)
include_directories(src/board src/cli src/games src/player)