enable_testing()
file(GLOB_RECURSE sourcelist . */*.c)
add_executable(gorotest gorotest.c ${sourcelist})
target_link_libraries(gorotest m goro)
include_directories(../src/board ../src/cli ../src/games ../src/player)
foreach(filename ${sourcelist})
  GET_FILENAME_COMPONENT(testname ${filename} NAME_WE)
  add_test(${testname} ../bin/gorotest ${testname})
endforeach(filename) 